tests/baselines/reference/letAndVarRedeclaration.errors.txt
letAndVarRedeclaration.ts(1,5): error TS2300: Duplicate identifier 'e0'.
letAndVarRedeclaration.ts(2,5): error TS2300: Duplicate identifier 'e0'.
letAndVarRedeclaration.ts(3,10): error TS2300: Duplicate identifier 'e0'.
letAndVarRedeclaration.ts(6,9): error TS2300: Duplicate identifier 'x1'.
letAndVarRedeclaration.ts(7,9): error TS2300: Duplicate identifier 'x1'.
letAndVarRedeclaration.ts(8,14): error TS2300: Duplicate identifier 'x1'.
letAndVarRedeclaration.ts(12,9): error TS2451: Cannot redeclare block-scoped variable 'x'.
letAndVarRedeclaration.ts(14,13): error TS2451: Cannot redeclare block-scoped variable 'x'.
letAndVarRedeclaration.ts(17,18): error TS2451: Cannot redeclare block-scoped variable 'x'.
letAndVarRedeclaration.ts(22,9): error TS2300: Duplicate identifier 'x2'.
letAndVarRedeclaration.ts(23,9): error TS2300: Duplicate identifier 'x2'.
letAndVarRedeclaration.ts(24,14): error TS2300: Duplicate identifier 'x2'.
letAndVarRedeclaration.ts(28,9): error TS2451: Cannot redeclare block-scoped variable 'x2'.
letAndVarRedeclaration.ts(30,13): error TS2451: Cannot redeclare block-scoped variable 'x2'.
letAndVarRedeclaration.ts(33,18): error TS2451: Cannot redeclare block-scoped variable 'x2'.
letAndVarRedeclaration.ts(37,5): error TS2451: Cannot redeclare block-scoped variable 'x11'.
letAndVarRedeclaration.ts(38,10): error TS2451: Cannot redeclare block-scoped variable 'x11'.
letAndVarRedeclaration.ts(42,9): error TS2451: Cannot redeclare block-scoped variable 'x11'.
letAndVarRedeclaration.ts(43,14): error TS2451: Cannot redeclare block-scoped variable 'x11'.
letAndVarRedeclaration.ts(48,9): error TS2451: Cannot redeclare block-scoped variable 'x11'.
letAndVarRedeclaration.ts(49,14): error TS2451: Cannot redeclare block-scoped variable 'x11'.


==== letAndVarRedeclaration.ts (21 errors) ====
    let e0
        ~~
!!! error TS2300: Duplicate identifier 'e0'.
    var e0;
        ~~
!!! error TS2300: Duplicate identifier 'e0'.
    function e0() { }
             ~~
!!! error TS2300: Duplicate identifier 'e0'.
    
    function f0() {
        let x1;
            ~~
!!! error TS2300: Duplicate identifier 'x1'.
        var x1;
            ~~
!!! error TS2300: Duplicate identifier 'x1'.
        function x1() { }
                 ~~
!!! error TS2300: Duplicate identifier 'x1'.
    }
    
    function f1() {
        let x;
            ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        {
            var x;
                ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        }
        {
            function x() { }
                     ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        }
    }
    
    module M0 {
        let x2;
            ~~
!!! error TS2300: Duplicate identifier 'x2'.
        var x2;
            ~~
!!! error TS2300: Duplicate identifier 'x2'.
        function x2() { }
                 ~~
!!! error TS2300: Duplicate identifier 'x2'.
    }
    
    module M1 {
        let x2;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        {
            var x2;
                ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        }
        {
            function x2() { }
                     ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        }
    }
    
    let x11;
        ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
    for (var x11; ;) {
             ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
    }
    
    function f2() {
        let x11;
            ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        for (var x11; ;) {
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        }
    }
    
    module M2 {
        let x11;
            ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        for (var x11; ;) {
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        }
    }